syntax = "proto3";
package msa_observer;
option go_package = "grpc/msa_observer";

import "proto/msa_utils.proto";

message RequestPushFirst {
   string Host = 1;
   int32 Port = 2;
   string Key = 3;
}

message RequestPushStats {
   string Key = 1;
   float CurCpu = 2;
   float MaxCpu = 3;
   float CurRam = 4;
   float MaxRam = 5;
   float CurHdd = 6;
   float MaxHdd = 7;
}

message RequestPushStatus {
   string Key = 1;
   bool IsNew = 2;
   msa_utils.StatusService Status = 3;
}

message RequestWho {
   string GroupType = 1;
}

message RequestRestartService {
   string Key = 1;
}

message ResponsePushFirst {
   repeated Info Dependents = 1;
}

message ResponseWho {
   string Key = 1;
}

message Response {
   bool Success = 1;
}

message Info {
   string Host = 1;
   int32 Port = 2;
   string Key = 3;
   string GroupType = 4;
}

service Observer {
   rpc PushFirst (RequestPushFirst) returns (ResponsePushFirst);
   rpc PushStats (RequestPushStats) returns (Response);
   rpc PushStatus (RequestPushStatus) returns (Response);
   rpc Who (RequestWho) returns (ResponseWho);
   rpc RestartService (RequestRestartService) returns (Response);
}